WPLUG-314 Fixed hardcoded alignment to be dynamic

--- a/plugins/se.infomaker.contentpart/scss/index.scss
+++ b/plugins/se.infomaker.contentpart/scss/index.scss
@@ -17,13 +17,13 @@
     }
 }
 
-div.x-im-alignment-dynamic {
+div.x-im-option-dynamic {
 
     &:last-child {
         padding-bottom: 12px;
     }
 
-    &.x-im-alignment-alignment {
+    &.x-im-option-option {
         margin-top: 10px;
         padding-left: 28px;
 
